--- a/index.html
+++ b/index.html
@@ -1,93 +1,39 @@
-
-<!DOCTYPE html />
-
+<!DOCTYPE html>
 <html>
 <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<title>Page Title</title>
 
-    <!-- Custom styles for this template -->
-    
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-<script src="../../assets/js/html5shiv.js"></script>
-<script src="../../assets/js/respond.min.js"></script>
-<![endif]-->
-
-<link href="css/app.css" rel="stylesheet">
-
+	<link rel="stylesheet" href="css/jquery.mobile-1.4.0.min.css" />
+	<link rel="stylesheet" href="css/app.css" />
+	<script src="js/jquery-1.9.1.min.js"></script>
+	<script src="js/jquery.mobile-1.4.0.min.js"></script>
+	<script src="js/app.js"></script>
 </head>
 <body>
-    <div id="mainView" class="container">
-        <ul class="nav nav-tabs" id="myTab">
-          <li><a href="#landing" data-toggle="tab"></a></li>
-          <li><a href="#startScreen" data-toggle="tab"></a></li>
-          <li><a href="#quiz" data-toggle="tab"></a></li>
-          <li><a href="#results" data-toggle="tab"></a></li>
-      </ul>
+	<!-- Start of first page -->
+	<div data-role="page" id="foo">
 
-      <!-- Tab panes -->
-      
-      <div id="panes" class="tab-content">
-        <div class="tab-pane active" id="landing">
-            <div class="logo"><span class="logothin">Giraffe</span><span class="logothick">Math</span></div>
-            <img id="landingPic" src="img/landing.png"/>
-            <p>Answer questions correctly to get the baby giraffe home before sunset!</p>
-            <button type="button" id="goToOptions" class="btn btn-primary btn-lg">Play</button>
-      </div>
-        <div class="tab-pane" id="startScreen">
-            <div class="logo"><span class="logothin">Giraffe</span><span class="logothick">Math</span></div>
-            <div class="btn-group-vertical radio" data-toggle="buttons">
-              <label class="btn btn-default active">
-                <input type="radio" name="MathOperators" value="Addition" id="optAddition" checked> Addition
-            </label>
-            <label class="btn btn-default">
-                <input type="radio" name="MathOperators" value="Subtraction" id="optSubtraction"> Subtraction
-            </label>
-            <label class="btn btn-default">
-                <input type="radio" name="MathOperators" value="Multiplication" id="optMultiplication"> Multiplication
-            </label>
-            <label class="btn btn-default">
-                <input type="radio" name="MathOperators" value="Division" id="optDivision"> Division
-            </label>
-        </div>
-        <fieldset>
-            <select id="ddlSkillLevel">
-                <option value="1">Easy</option>
-                <option value="2">Challenging</option>
-            </select>
-        </fieldset>
-        <button type="button" class="btn btn-primary btn-lg" id="startTest">Start</button>
-    </div>
+		<div role="main" class="ui-content">
+			<div class="logo"><span class="logothin">Giraffe</span><span class="logothick">Math</span></div>
+			<p>I'm first in the source order so I'm shown as the page.</p>
+			<p>View internal page called </p>
+			<a href="#bar" data-role="button">Link button</a>
 
-    <div class="tab-pane" id="quiz">
-        <img id="thesun" src="img/sun.png"/>
-        <img id="mama" src="img/mom.png"/>
-        <img id="baby" src="img/baby.png"/>
-        <img id="hills" src="img/hills.png"/>
-        <span id="countdown"></span>    
-        <div id="QuestionHolder"></div>
-        <div id="wrong">Nope!</div>
-    </div>
+		</div><!-- /content -->
 
-    <div class="tab-pane" id="results">  
-        <div id="resultsList"></div>
-        <button type="button" class="btn btn-primary btn-lg" id="startTestAgain">Start Again!</button>
-    </div>
+	</div><!-- /page -->
 
-</div>
-</div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.timer.js"></script>
-<script src="js/paper.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.easing.compatibility.js "></script>
-<script src="js/app.js"></script>
-<script>
-</script>
+	<!-- Start of second page -->
+	<div data-role="page" id="bar">
+
+		<div role="main" class="ui-content">
+			<p>I'm the second in the source order so I'm hidden when the page loads. I'm just shown if a link that references my id is beeing clicked.</p>
+			<p><a href="#foo">Back to foo</a></p>
+		</div><!-- /content -->
+
+	</div><!-- /page -->
+
 </body>
-
 </html>
