--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="css/app.css" />
 	<script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/jquery.mobile-1.4.0.min.js"></script>
+	<script src="js/jquery.timer.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/jquery.easing.compatibility.js "></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
