messed with game animations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="logo"><span class="logothin">Giraffe</span><span class="logothick">Math</span></div>
 			<img id="landingPic" src="img/landing.png"/>
 			<p>Answer questions correctly to get the baby giraffe home before sunset!</p>
-			<a href="#options-page" class="btn-cta" data-role="button">Play</a>
+			<a href="#options-page" class="btn-cta" data-corners="false" data-role="button">Play</a>
 		</div><!-- /content -->
 
 	</div><!-- /page -->
@@ -50,7 +50,7 @@
 				</select>
 			</div>
         
-			<a href="#game-page" class="btn-cta" data-role="button" id="startTest">Start</a>
+			<a href="#game-page" class="btn-cta" data-role="button" data-corners="false" id="startTest">Start</a>
 		</div><!-- /content -->
 
 	</div><!-- /page -->
@@ -76,7 +76,7 @@
 
 		<div role="main" class="ui-content">
 			 <div id="resultsList"></div>
-			 <a href="#options-page" data-role="button" id="startTestAgain">Start Again!</a>
+			 <a href="#options-page" data-role="button" data-corners="false" id="startTestAgain">Start Again!</a>
 			
 		</div><!-- /content -->
 
