--- a/index.html
+++ b/index.html
@@ -59,12 +59,15 @@
 	<div data-role="page" id="game-page">
 
 		<div role="main" class="ui-content">
+
+			<div id="night"> </div>
 		<img id="thesun" src="img/sun.png"/>
         <img id="mama" src="img/mom.png"/>
         <img id="baby" src="img/baby.png"/>
         <img id="hills" src="img/hills.png"/>
         <span id="countdown"></span>    
         <div id="QuestionHolder"></div>
+        <div id="right">Yay!</div>
         <div id="wrong">Nope!</div>
 			
 		</div><!-- /content -->
