--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <img id="hills" src="img/hills.png"/>
         <span id="countdown"></span>    
         <div id="QuestionHolder"></div>
-        <div id="right">Yay!</div>
-        <div id="wrong">Nope!</div>
+        <div id="right">good job!</div>
+        <div id="wrong">Try again!</div>
 			
 		</div><!-- /content -->
 
