--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 		<div role="main" class="ui-content">
 
-			<div id="night"> </div>
+			<!-- <div id="night"> </div> -->
 		<img id="thesun" src="img/sun.png"/>
         <img id="mama" src="img/mom.png"/>
         <img id="baby" src="img/baby.png"/>
